<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ghost</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_victory">VictoryActivity</string>
    <string name="title_main_victory">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="victoryMessage">Congratulations PLAYER, you are the winner!</string>
    <string name="playAgainButton">Play Again</string>
    <string name="replayButton">Replay</string>
    <string name="homeScreenButton">Home</string>
    <string name="scoreboardButton">Scoreboard</string>
    <string name="title_activity_scoreboard">ScoreboardActivity</string>
    <string name="scoreboardTitle">Scoreboard</string>
    <string name="CakeContentDescription">Cake for the winner</string>
    <string name="changeLanguageMenuItemText">Change Language</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="WelcomeMessage">Welcome to Ghost!</string>
    <string name="submitButton">Submit</string>
    <string name="rulesButton">Rules</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="startGameButton">Start game!</string>
    <string name="languageIndicator">Language:</string>

</resources>
