<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="joostwagenaar.Ghost.VictoryActivity"
    android:background="#fffff1f1">

    <TextView
        android:text="@string/victoryMessage"
        android:id="@+id/victoryMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:background="#ffffc2a1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/victoryMessage"
        android:layout_centerHorizontal="true"
        android:id="@+id/ButtonBar">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replayButton"
            android:id="@+id/replayButton"
            android:onClick="onReplayButtonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeScreenButton"
            android:id="@+id/playAgainButton"
            android:onClick="onChangeNamesButtonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreboardButton"
            android:id="@+id/scoreboardButton"
            android:onClick="onScoreboardButtonClicked"/>

    </LinearLayout>


    <ImageView
        android:contentDescription="@string/CakeContentDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ButtonBar"
        android:id="@+id/cakeImageView"
        android:src="@drawable/cake" />

</RelativeLayout>
