<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="joostwagenaar.Ghost.HomeActivity"
    android:background="#fffff1f1">

    <TextView android:text="@string/WelcomeMessage" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/welcomeTextView"
        android:textColor="#ffffffff"
        android:textSize="30sp"
        android:background="#ffffc2a1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/player1EditText"
        android:layout_below="@+id/welcomeTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:hint="@string/player1"
        android:maxLength="10" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/player2EditText"
        android:layout_below="@+id/player1EditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:hint="@string/player2"
        android:maxLength="10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Language"
        android:id="@+id/changeLanguageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/player2EditText"
        android:paddingRight="10dp"
        android:onClick="onChangeLanguageButtonClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGameButton"
        android:id="@+id/startGameButton"
        android:layout_alignBottom="@id/changeLanguageButton"
        android:layout_toRightOf="@+id/changeLanguageButton"
        android:layout_toEndOf="@+id/changeLanguageButton"
        android:onClick="onStartGameButtonClicked"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languageIndicator"
        android:id="@+id/languageIndicator"
        android:layout_below="@+id/startGameButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textColor="#ffffc2a1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rulesButton"
        android:id="@+id/button3"
        android:layout_below="@id/languageIndicator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:onClick="onRulesButtonClicked"/>



</RelativeLayout>
